src/test/ui/multiple-main-3.stderr
error[E0137]: multiple functions with a #[main] attribute
  --> $DIR/multiple-main-3.rs:9:5
   |
LL | / fn main1() {
LL | | }
   | |_- first #[main] function
...
LL | /     fn main2() {
LL | |     }
   | |_____^ additional #[main] function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0137`.
