src/test/ui/multiple-main-3.rs
#![feature(main)]

#[main]
fn main1() {
}

mod foo {
    #[main]
    fn main2() { //~ ERROR multiple functions with a #[main] attribute
    }
}
